test for HTTP/JSON data download